# PollenForecast

./: .gitignore  02_Figma设计提示词.md  03_下一步行动计划.md  20251125230156_apiChange.csv  AppGallery上架资料.md  CONTRIBUTING.md  EXIFPhotoParamTool_gitlog_20260102_220154.txt  Figma设计流程标准.md  ICP备案指南.md  PollenForecast.code-workspace  README.md  TRAE_CN_SETUP.md  build-profile.json5  fix_encoding.ps1  package-lock.json  华为云服务器购买指南.md  备案信息速查表.md  如何查看效果.md  截图拍摄指南.md  提交华为Bug报告模板.md  隐私政策.md  验证步骤.md
.claude/: API17兼容性实施建议.md  API版本兼容实施清单.md  API版本兼容方案可行性咨询.md  API版本兼容方案（全保留+降级体验）.md  API降级实施计划.md  CLAUDE.md  GLOBAL_README.md  MapKit功能清单与API17兼容性咨询.md  User_Rules_Cursor版.md  事故复盘_20260110.md  任务_构建修复.md  任务_知识库整理.md  任务_问专家.md  地图深浅色模式适配工单咨询.md  地图配置信息速查.md  备份规则.md  工单内容_512字版.md  工单内容_可直接复制.txt  开发日志.md  当前问题.md  指导文件优化方案.md  知识库.md  知识库_中转站（待验证实践效果）.md  问题记录.md
.github/: copilot-instructions.md
.trae/: AI协作指南.md
AppScope/: app.json5
Calculator1/: build-profile.json5  code-linter.json5  oh-package-lock.json5  oh-package.json5
CuteCalculator/: .gitignore  build-profile.json5  图片素材清单.md  问题反馈_按压动画部分失效.md  隐私政策.md
CuteCalculator_NEW/: build-profile.json5
EXIFPhotoParamTool_Demo/: build-profile.json5
EXIFPhotoParamTool_Demo/entry/src/main/cpp/: CMakeLists.txt  exif_parser.cpp  exif_parser.h  napi_init.cpp
EXIFPhotoParamTool_Demo/entry/src/main/cpp/types/libexifparser/: Index.d.ts  index.ets  oh-package.json5
Healthy_life/: README.md  build-profile.json5  配置系统使用说明.md
LubanRuler/: build-profile.json5
PollenForecast/: .gitignore  build-profile.json5
(+724 files in other folders)
